--- a/config/common.config
+++ b/config/common.config
@@ -8,13 +8,13 @@
     {sasl,
         [
         {errlog_type, error},
-        {sasl_error_logger, {file, "../logs/sasl.txt"}},
+        {sasl_error_logger, {file, "../logs/common_sasl.txt"}},
         {sasl_logger_mf_dir, "../logs"},
         {sasl_logger_mf_maxbytes, 10240},
         {sasl_logger_mf_maxfiles, 10}
         ]
     },
-    {gs,
+    {common,
         [
         {db_host, "127.0.0.1"},
         {db_port, 3306},
@@ -22,7 +22,9 @@
         {db_pass, "123456"},
         {db_name, "test"},
         {db_encode, utf8},
-        {db_connect_num, 10}
+        {db_connect_num, 10},
+        {log_level, 5},
+        {log_path, "../logs"}
         ]
     }
 ].
