--- a/config/gs.config
+++ b/config/gs.config
@@ -1,26 +1,26 @@
 [
-	{kernel,
-		[
-		{inet_dist_listen_min, 40001},
-		{inet_dist_listen_max, 40200}
-		]
-	},
+    {kernel,
+        [
+        {inet_dist_listen_min, 40001},
+        {inet_dist_listen_max, 40200}
+        ]
+    },
     {sasl,
         [
         {errlog_type, error},
-        {sasl_error_logger, {file, "../logs/common_sasl.txt"}},
+        {sasl_error_logger, {file, "../logs/game_sasl.txt"}},
         {sasl_logger_mf_dir, "../logs"},
         {sasl_logger_mf_maxbytes, 10240},
         {sasl_logger_mf_maxfiles, 10}
         ]
     },
-    {common,
+    {gs,
         [
         {db_host, "127.0.0.1"},
         {db_port, 3306},
         {db_user, "root"},
         {db_pass, "123456"},
-        {db_name, "test"},
+        {db_name, "tjz"},
         {db_encode, utf8},
         {db_connect_num, 10},
         {log_level, 5},
